# sys-stat

./: Cargo.toml  build.py  chart.py  readme.md  service-status.toml  sys-stat.toml
src/: check.rs  config.rs  gui.rs  main.rs
