[package]
name = "service-status"
version = "0.1.1"
authors = ["Jeffrey McAteer <jeffrey.p.mcateer@gmail.com>"]
edition = "2018"
license = "GPL-2.0-only"

[[bin]]
name = "sys-stat"
path = "src/main.rs"

[features]
default = ["web-view"]

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
dirs = "3.0"
humantime = "2.0"
reqwest = { version = "0.10", features = ["blocking"] }
tokio = { version = "0.2", features = ["full"] }
ctrlc = "3.1"
handlebars = "3.5"
serde_json = "1.0"


web-view = { version = "0.7", optional = true }

